...
      showSnackBar(message: failure.error, context: context);
    }, (success) {
      state = state.copyWith(
        isLoading: false,
        error: null,
      );
      showSnackBar(message: "User Registered Successfully", context: context);
    });
  }

  Future<void> loginUser(
      BuildContext context, String username, String password) async {
    state = state.copyWith(isLoading: true);
...
    }, (success) {
      state = state.copyWith(
        isLoading: false,
        error: null,
      );
      // Navigator.popAndPushNamed(context, AppRoute.homeRoute);
      showSnackBar(message: "User Logged In Successfully", context: context);
    });
  }

  Future<void> uploadProfilePicture(File? file, BuildContext context) async {
    state = state.copyWith(isLoading: true);
    var data = await _authUseCase.uploadProfilePicture(file!);
...
