...
      backgroundColor: Colors.white,
      appBar: AppBar(
        elevation: 0,
        toolbarHeight: 70,
        backgroundColor: Colors.white,
        title: const Text(
          'SIGNUP',
          style: TextStyle(
            fontSize: 33,
            color: Colors.purple,
            fontWeight: FontWeight.bold,
          ),
        ),
...
